# Cache

./: .gitignore  CMakeLists.txt  README.md  ideal_main.cpp  main.cpp  runtest.sh  two_q_main.cpp
assets/: pages.txt
include/: TwoQCache.hpp  ideal_cache.hpp  two_q_cache.hpp
source/: TwoQCache.cpp  two_q_cache.cpp
src/: cash.hpp
tests/: test1.in  test2.in  test3.in  test4.in  test6.in  test7.in  test8.in  test9.in
tests/ideal_cache_tests/: ideal_cache_test10.in
tests/two_q_tests/: two_q_test1.in  two_q_test2.in  two_q_test5.in  two_q_test8.in
